--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-loop",
-  "npmName": "redux-loop",
-  "version": "2.2.2",
+  "name": "@mazechazer/redux-loop",
+  "npmName": "@mazechazer/redux-loop",
+  "version": "1.0.0",
   "description": "Sequence your effects naturally and purely by returning them from your reducers.",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
